# A-plus-RSI-div-bot

./: .env.example  .gitignore  A+_pine_code  KAMA  TP_RSI_V2_code  config.yaml  pyproject.toml
scripts/: fetch_data.py  run_backtest.py  run_backtest_v2.py  run_live.py
src/: config.py  models.py
src/backtest/: engine.py  engine_v2.py  report.py  sim_exchange.py
src/connectors/: base.py  bybit_connector.py
src/indicators/: aplus_signal.py  kama.py  pivots.py  resampler.py  suite.py  tp_rsi_v2.py
src/live/: bot.py
src/scanner/: multi_coin_scanner.py
src/scoring/: signal_scorer.py
src/strategy/: entry_engine.py  exit_engine.py  pnl.py  position_manager.py  regime.py  risk_manager.py  sunday_open.py
tests/: conftest.py  test_aplus_signal.py  test_backtest.py  test_engine_v2.py  test_entry_engine.py  test_exit_engine.py  test_kama.py  test_resampler.py  test_risk_manager.py  test_scorer.py  test_tp_rsi.py
