[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aplus-rsi-div-bot"
version = "0.1.0"
description = "A+ RSI Divergence Trading Bot — Bybit USDT Perpetual Futures"
requires-python = ">=3.11"
dependencies = [
    "pybit>=5.8.0",
    "pandas>=2.1",
    "pandas_ta",
    "numpy>=1.26",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
